--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     implementation 'org.springframework:spring-context'
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'jakarta.annotation:jakarta.annotation-api:1.3.5'
+    implementation 'javax.inject:javax.inject:1'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
