--- a/build.gradle
+++ b/build.gradle
@@ -13,12 +13,9 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework:spring-core'
-    implementation 'org.springframework:spring-context'
     implementation 'org.springframework.boot:spring-boot-starter'
-    implementation 'jakarta.annotation:jakarta.annotation-api:1.3.5'
-    implementation 'org.postgresql:postgresql:42.3.8'
-    implementation 'javax.inject:javax.inject:1'
+    implementation 'org.postgresql:postgresql'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
