--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-db.username=postgres
-db.password=123
-db.pool.size=12
+#db.username=${username.value:postgres}
+#db.password=123
+#db.pool.size=12
 db.driver=PostgresDriver
-db.url=postgres:5432
-db.hosts=localhost,127.0.0.1
+#db.url=postgres:5432
+#db.hosts=localhost,127.0.0.1
+#spring.profiles.active=qa
