--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,3 +17,8 @@ db:
     - size: 2
       timeout: 2
 #spring:profiles:active:qa
+
+logging:
+  level:
+    root: WARN
+    com.example.database.pool: INFO
